# tinyalloc

./: BYTEBUFFER_USAGE.md  Cargo.toml  README.md  SIZE_OPTIMIZATION.md
examples/: bytebuffer_capacity.rs  bytebuffer_deque.rs  bytebuffer_stream.rs  bytebuffer_usage.rs  custom_global_size.rs  deque_interrupt.rs  global_usage.rs  nominput_usage.rs  prelude_demo.rs  size_test.rs  slots_limit_demo.rs  stream_global.rs
src/: allocator.rs  global.rs  prelude.rs
src/backend/: mod.rs  naive.rs  tinyslab.rs
src/utils/: bytebuffer.rs  bytebufferdeque.rs  mod.rs  nominput.rs
